# bareboot

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  .gitlab-ci.yml  Doxyfile  README.md  hello_meson  meson.build
.gitlab/: clang.yml  no-newline-check.yml  tests.yml
docs/: 01-introduction-and-flashing.md  02-migrating_to_other_platforms.md  03-usage-guidelines.md  general.md  tutorial.md
include/: memory_map.h  metadata.h
src/: bootloader.cpp  bootloader.h  call_constructors.cpp  call_constructors.h  irq_handlers.h  memory_map.h  meson.build  metadata.h  start_app.h  startup.cpp  startup.h  weak_irq_handlers.cpp
src/architecture/: architecture_dependent.h  meson.build
src/architecture/arm/: architecture_dependent.cpp
src/architecture/armv7/: architecture_dependent.cpp  meson.build
src/architecture/dummy/: architecture_dependent.cpp  meson.build
src/architecture/x64/: architecture_dependent.cpp
src/checksums/: checksums.h  crc32.h
src/checksums/castagnoli_crc32/: castagnoli_crc32.h
src/cpus/cortex_m/: cm4_fpu.cpp  hw_periph_bitband.h  nvic.cpp  nvic.h  peripheral_defs.h  systick_manager.cpp  systick_manager.h
src/cpus/cortex_m/register_access/: mmio.h  register.h  reserved_bytes.h
src/cpus/cortex_m/register_maps/: nvic_registers.h  scb_registers.h  systick_registers.h
src/hash/: meson.build
src/hash/sha_256/: meson.build  sha_256.cpp  sha_256.h
src/hmac/: hmac.cpp  hmac.h  meson.build
src/memcpy/: memcpy.cpp  memcpy.h
src/microcontroller/: meson.build  metadata_interface.h  microcontroller_dependent.h
src/microcontroller/bootloader_dummy/: bootloader_dummy.cpp  main_dummy.cpp  meson.build
src/microcontroller/generic/: meson.build  metadata_interface.cpp  microcontroller_dependent.cpp
src/microcontroller/generic-dummy/: meson.build  metadata_interface.cpp  microcontroller_dependent.cpp
src/microcontroller/va41620/: boot_rom_spi.cpp  boot_rom_spi.h  bootloader.ld  irq_handlers.h  meson.build  metadata_interface.cpp  microcontroller_dependent.cpp  weak_irq_handlers.cpp
src/microcontroller/va41620/boot_rom_spi/: boot_rom_spi.cpp  boot_rom_spi.h  meson.build  spi_messages.h
src/microcontroller/va41620/cortex_m/: hw_periph_bitband.h  nvic.cpp  nvic.h
src/microcontroller/va41620/cortex_m/register_access/: mmio.h  register.h  reserved_bytes.h
src/microcontroller/va41620/hal/: hal_spi.cpp  hal_spi.h  meson.build
src/microcontroller/va41620/hw_hal/: hw_hal_spi.cpp  hw_hal_spi.h  hw_hal_watchdog.cpp  hw_hal_watchdog.h  meson.build
src/microcontroller/va41620/init_structs/: init_structs_va41620.cpp  init_structs_va41620_dev_board.cpp  meson.build
src/microcontroller/va41620/peripheral_ctrl/: peripheral_defs.h
src/microcontroller/va41620/peripheral_ctrl/clock_management/: clkgen_configstruct.h  clkgen_setup.h
src/microcontroller/va41620/peripheral_ctrl/pin_config/: enums.h
src/microcontroller/va41620/peripheral_ctrl/register_maps/: clkgen_registers.h  spi_registers.h  sysconfig_peripheral_bitband.h  sysconfig_registers.h  watchdog_registers.h
src/microcontroller/va41620/rodos_includes/: meson.build
src/microcontroller/va41620/rodos_includes/cortex_m/: hw_periph_bitband.h
src/microcontroller/va41620/rodos_includes/cortex_m/register_access/: register.h
src/microcontroller/va41620/rodos_includes/hal/: hal_spi.cpp  hal_spi.h  meson.build
src/microcontroller/va41620/rodos_includes/hw_hal/: hw_hal_spi.cpp  hw_hal_spi.h  hw_hal_watchdog.h
src/microcontroller/va41620/rodos_includes/peripheral_ctrl/: peripheral_defs.h
src/microcontroller/va41620/rodos_includes/peripheral_ctrl/clock_management/: clkgen_setup.h
src/microcontroller/va41620/rodos_includes/peripheral_ctrl/register_maps/: clkgen_registers.h  spi_registers.h  sysconfig_peripheral_bitband.h  sysconfig_registers.h  watchdog_registers.h
src/microcontroller/va41620/rodos_includes/subtargets/peb1_100mhz/: clkgen_config.h
src/microcontroller/va41620/subtargets/peb1_100mhz/: clkgen_config.h  platform-parameter.h
src/microcontroller/va41620/watchdog/: watchdog.cpp  watchdog.h
src/peripheral_ctrl/: aborting_error.cpp  aborting_error.h  peripheral_defs.h
src/peripheral_ctrl/clock_management/: busywait_hbo.cpp  clkgen_configstruct.h  clkgen_setup.h  clock_initializers.cpp  clock_initializers.h
src/peripheral_ctrl/pin_config/: enums.h  pin_config.cpp  pin_config.h  pin_function_map.h  pinmap.h
src/peripheral_ctrl/register_maps/: adc_registers.h  can_registers.h  clkgen_registers.h  gpio_registers.h  i2c_registers.h  ioconfig_registers.h  spi_registers.h  sysconfig_peripheral_bitband.h  sysconfig_registers.h  tim_registers.h  uart_registers.h
src/rodos_includes/: bit_field.h  hal_gpio.h  misc-rodos-funcs.h  string_pico.cpp  string_pico.h
src/spi/: hal_gpio.cpp  hal_spi.cpp  hal_spi.h  hw_hal_gpio.cpp  hw_hal_gpio.h  hw_hal_spi.cpp  hw_hal_spi.h
src/subtargets/peb1_100mhz/: clkgen_config.h
src/subtargets/peb1_10mhz/: clkgen_config.h
src/subtargets/peb1_20mhz/: clkgen_config.h
src/subtargets/peb1_40mhz/: clkgen_config.h
src/subtargets/peb1_80mhz/: clkgen_config.h  platform-parameter.h
tests/: meson.build
tests/common_tests/: basic.cpp  common.cpp  memcpy_tests.cpp  meson.build
tests/crc_tests/: crc_tests.cpp  meson.build
tests/hash_tests/: meson.build  sha_256_tests.cpp
tests/mac_tests/: hmac_tests.cpp  meson.build
tests/memcpy_tests/: memcpy_tests.cpp  meson.build
tests/target_dependent_tests/: meson.build
tests/target_dependent_tests/generic/: meson.build  metadata_interface_tests.cpp  platform_parameter_tests.cpp
tests/target_dependent_tests/va41620/: meson.build  metadata_interface_tests.cpp  platform_parameter_tests.cpp
tests/target_dependent_tests/va41620/mocks/microcontroller/va41620/cortex_m/register_access/: mmio.h
tests/target_dependent_tests/va41620/mocks/microcontroller/va41620/hal/: hal_spi.h
tests/target_dependent_tests/va41620/mocks/microcontroller/va41620/rodos_includes/hal/: hal_spi.h
tests/target_dependent_tests/va41620/mocks/microcontroller/va41620/rodos_includes/hw_hal/: hw_hal_watchdog.h
(+40 files in other folders)
